2003-09-02  GDB Administrator  <gdbadmin@sourceware.org>

	* version.in: Bump to version 5.3.91.

2003-08-27  Michael Chastain  <mec@shout.net>

	* config/djgpp/fnchange.lst: Add gdb/testsuite/gdb.mi/mi2-var-*.

2003-08-27  Jeff Johnston  <jjohnstn@redhat.com>

	Sync ia64-tdep.c with mainline.
	
	2003-08-26  Jeff Johnston  <jjohnstn@redhat.com>
	* ia64-tdep.c (examine_prologue): Only stop at predicated insns if
	we are frameless or the return address register is already known. 

	2003-08-26  Jeff Johnston  <jjohnstn@redhat.com>
	* ia64-tdep.c (ia64_convert_from_func_addr): New function.
	(ia64_gdbarch_init): Call set_gdbarch_convert_from_func_addr(). 

	2003-08-25  Jeff Johnston  <jjohnstn@redhat.com>
	* ia64-tdep.c (pseudo_regs): New enum that lists gr32-gr127, p0-p63, 
	bof, and nat0-nat127 as pseudo-registers.
	(ia64_frame_cache): New struct used to cache frame info.
	(ia64_register_reggroup_p): New routine used to override default
	register grouping so registers without names are still saved and 
	restored.
	(ia64_dwarf_reg_to_regnum): New routine to map gr32-gr127 to their 
	pseudo values.
	(ia64_pseudo_register_read): New routine to read pseudo-registers.
	(ia64_pseudo_register_write): New routine to write pseudo-registers.
	(ia64_alloc_frame_cache): New routine to create a new 
	ia64_frame_cache.
	(examine_prologue): Change prototype to add next_frame pointer.
	Assume frameless until otherwise proven.  Verify that the cfm for
	current frame matches the cfm that should occur for the prologues 
	alloc insn and if equal, mark as not frameless.  At end of routine,
	if not frameless, calculate registers for the previous frame and store
	in the cache, if a cache is provided.
	(ia64_skip_prologue):  Use new prototype when calling examine_prologue
	and pass 0 for next_frame.
	(ia64_store_return_value): Change to use convert_typed_floating()
	instead of calling ia64_convert_to_raw().
	(ia64_extract_return_value): Change to use convert_typed_floating()